# mod_s4cloud

./: Cargo.toml  README.md
fighter/cloud/motion/body/c00/: e00catchattack.nuanmb
fighter/cloud/motion/body/c01/: c01attacks3s.nuanmb  c05attackairlw.nuanmb  e00catchturn.nuanmb
fighter/cloud/param/: vl.prc
fighter/common/param/: fighter_param.prc
src/: lib.rs  test.rs
src/aerials/: mod.rs
src/ground/: mod.rs
src/specials/: mod.rs
